2008-11-03  Olav Vitters  <olav@bkor.dhs.org>

	* src/ui/theme-parser.c: Fix build by readding accidentally removed
	'}'.

2008-10-29  Thomas Thurman  <tthurman@gnome.org>

	* src/ui/theme-parser.c: variable names in messages should be
	  double-quoted.  Closes #558309.

2008-10-28  Thomas Thurman  <tthurman@gnome.org>

	* src/include/screen-bindings.h: fix accidental name change of
	  run_command_terminal.  Closes #557943.

2008-10-27  Thomas Thurman  <tthurman@gnome.org>

        * src/core/prefs.c (titlebar_handler, handle_preference_update_enum):
        Add initialisation which I missed on the previous checkin.  Also
        an extra comment.

2008-10-27  Brian Cameron  <brian.cameron@sun.com>

        Fix some crashes with the new GDM 2.24.  Closes #558058.

        * src/ui/ui.c (meta_ui_parse_modifier): another null check
        * src/core/prefs.c (titlebar_handler, button_layout_handler):
          more null checks.

2008-10-26  Thomas Thurman  <tthurman@gnome.org>

        * src/core/prefs.c (mouse_button_mods_handler): Ignore values
          of .../mouse_button_modifier key if the key's missing.
          Closes Launchpad bug #258054, Launchpad bug #266929.

2008-10-23  Frederic Peters  <fpeters@0d.be>

	* doc/creating_themes/C/creating-metacity-themes.xml: added missing @id
	on <book> top element.

2008-10-23  Frederic Peters  <fpeters@0d.be>

	* doc/creating_themes/Makefile.am:
	* doc/creating_themes/C/creating_metacity_themes.xml: renamed document
	to creating-metacity-themes to match other manuals usage of dashes.

2008-10-23  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.8.

2008-10-23  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.5 release.

2008-10-23  Thomas Thurman  <tthurman@gnome.org>

        * src/core/schema-bindings.c: fix stupid thinko which
          caused defaults to be incorrect
        * src/include/window-bindings.h: "space" needs to be
          lowercase
